fix map covers

--- a/src/components/SharedComponents/MapCard/style.module.scss
+++ b/src/components/SharedComponents/MapCard/style.module.scss
@@ -21,6 +21,7 @@
     height: $card-height;
     border-radius: $border-radius;
 
+    object-fit: cover;
     position: absolute;
     inset: 0;
   }
